--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,29 +3,44 @@
 <head>
     <!-- <link href="https://vjs.zencdn.net/7.0.5/video-js.css" rel="stylesheet"> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+    <link href="https://vjs.zencdn.net/7.0.5/video-js.css" rel="stylesheet">
+    <script src="http://vjs.zencdn.net/ie8/ie8-version/videojs-ie8.min.js"></script>
 </head>
 <style>
-    #video {
-        position: absolute;
-        top: 0px;
-        right: 0px;
-        bottom: 0px;
-        left: 0px;
-        max-height: 100%;
-        max-width: 100%;
-        margin: auto;
-        object-fit: contain;
+    .video-js {
+        display: block;
+        vertical-align: top;
+        box-sizing: border-box;
+        color: #fff;
+        background-color: #000;
+        padding: 0;
+        font-size: 10px;
+        line-height: 1;
+        font-weight: normal;
+        font-style: normal;
+        font-family: Arial, Helvetica, sans-serif;
+        word-break: initial;
+        position: unset;
     }
 </style>
 
 <body id="body" style="background-color: rgb(0, 0, 0);display: block;">
     <script>
         let src = "<%= src %>";
-        if(src.includes('bilutv')){
-            $('#body').append('<video autoplay controls id="video"><source src="<%= src %>" type="video/mp4"></video>');
-        } else  {
-            $('#body').append('<iframe width="100%" height="97%" style="border: none" src="<%= src %>" allowfullscreen="true" webkitallowfullscreen="true"></iframe>');
+        if (src.includes('bilutv')) {
+            $('#body').append(
+                '<video id="my-video" class="video-js" style="width:100%" controls preload="auto" poster="https://i.mycdn.me/image?id=870984845428&t=0&plc=WEB&tkn=*GpDcWFcvOUCvaplcX7nPmDXzndM" data-setup="{}"><source src="' +
+                src + '"type="video/mp4"></video>');
+            // $('#body').append('<video autoplay controls id="video"><source src="<%= src %>" type="video/mp4"></video>');
+        } else {
+            $('#body').append(
+                '<iframe width="100%" height="97%" style="border: none" src="<%= src %>" allowfullscreen="true" webkitallowfullscreen="true"></iframe>'
+            );
         }
     </script>
+    <script src="https://vjs.zencdn.net/7.0.5/video.js"></script>
+
+
 </body>
+
 </html>
