--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,7 +34,7 @@
             $('#body').append('<video id="my-video" class="video-js" style="width:100%" controls preload="auto" data-setup="{}"><source src="' +src + '"type="video/mp4"></video>');
        
         } else {
-            $('#body').append('<img src="https://drudesk.com/sites/default/files/404-error-page-not-found.jpg">');
+            $('#body').append('<img style="width:100%;height:auto" src="https://drudesk.com/sites/default/files/404-error-page-not-found.jpg">');
         }
     </script>
     <script src="https://vjs.zencdn.net/7.0.5/video.js"></script>
