--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,10 +22,10 @@
         position: unset;
     }
     .not-found{
-    background-image: url("https://i.mycdn.me/image?id=870984845428&t=0&plc=WEB&tkn=*GpDcWFcvOUCvaplcX7nPmDXzndM");
+    background-image: url("https://3.bp.blogspot.com/-mdwC1rVioyk/W1B1hNXk5vI/AAAAAAAAFvM/k_hRQ2KfQbsZN3xI374cw7mXYBXakPCBwCLcBGAs/s1600/not-found-error-message-internet-connection-problem-concept-banner-flat-vector-illustration-95261161.jpg");
 
     /* Full height */
-    width: 100%; 
+    height: 100%; 
 
     /* Center and scale the image nicely */
     background-position: center;
