--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,56 +1,13 @@
-<html lang="en">
-
-<head>
-    <!-- <link href="https://vjs.zencdn.net/7.0.5/video-js.css" rel="stylesheet"> -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-    <link href="https://vjs.zencdn.net/7.0.5/video-js.css" rel="stylesheet">
-</head>
-<style>
-    .video-js {
-        display: block;
-        vertical-align: top;
-        box-sizing: border-box;
-        color: #fff;
-        background-color: #000;
-        padding: 0;
-        font-size: 10px;
-        line-height: 1;
-        font-weight: normal;
-        font-style: normal;
-        font-family: Arial, Helvetica, sans-serif;
-        word-break: initial;
-        position: unset;
-    }
-    .not-found{
-    background-image: url("https://3.bp.blogspot.com/-mdwC1rVioyk/W1B1hNXk5vI/AAAAAAAAFvM/k_hRQ2KfQbsZN3xI374cw7mXYBXakPCBwCLcBGAs/s1600/not-found-error-message-internet-connection-problem-concept-banner-flat-vector-illustration-95261161.jpg");
-
-    /* Full height */
-    height: 100%; 
-
-    /* Center and scale the image nicely */
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    }
-</style>
-
-<body id="body" style="background-color: rgb(0, 0, 0);display: block;">
-    <script>
-        let src = "<%= src %>";
-        if(src.includes('drive.google.com') || src.includes('openload')){
-            $('#body').append(
-                '<iframe width="100%" height="97%" style="border: none" src="<%= src %>" allowfullscreen="true" webkitallowfullscreen="true"></iframe>'
-            );
-        } else if(src !== 'error'){
-            $('#body').append('<video poster="https://i.mycdn.me/image?id=870984845428&t=0&plc=WEB&tkn=*GpDcWFcvOUCvaplcX7nPmDXzndM" id="my-video" class="video-js" style="width:100%" controls preload="auto" data-setup="{}"><source src="' +src + '"type="video/mp4"></video>');
-       
-        } else {
-            $('#body').append('<div class="not-found"></div>');
-        }
-    </script>
-    <script src="https://vjs.zencdn.net/7.0.5/video.js"></script>
-
-
-</body>
-
-</html>
+<style>*{margin:0;padding:0}</style>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script>
+var link = "<%= src %>" ;
+link = link.replace(/&amp;/g,'&');
+var type = "mp4";
+</script>
+<script type="text/javascript" src="http://banhtv.net/api/jwplayer/jwplayer-banhtv.js"></script>
+<script>jwplayer.key="KSCvOsRY0P0q2R1b9kgrfPV0pKu2DBk9P2iUhPmGO5A=";</script>
+<div id="player-content" class="player"></div>
+<script type="text/javascript">
+	$("#player-content").html("<script type=\"text/javascript\">jwplayer(\"player-content\").setup({file: '"+link+"',label:'video',type:'mp4',width: \"100%\",height: \"100%\",image: \"\",primary: \"html5\",controls: true,autostart: true, allowfullscreen: true,skin: \"seven\"});jwplayer(\"player-content\").addButton('\/\/i.imgur.com\/f8RG3vU.png','Tải Phim',function(){window.location.href=jwplayer(\"player-content\").getPlaylistItem()['file'];},'download');<\/script>");
+</script>
