--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@ var link = "<%= src %>" ;
 link = link.replace(/&amp;/g,'&');
 var type = "mp4";
 </script>
-<script type="text/javascript" src="jwplayer-phim360.js"></script>
+<script type="text/javascript" src="/views/jwplayer-phim360.js"></script>
 <script>jwplayer.key="KSCvOsRY0P0q2R1b9kgrfPV0pKu2DBk9P2iUhPmGO5A=";</script>
 <div id="player-content" class="player"></div>
 <script type="text/javascript">
