--- a/views/index3.ejs
+++ b/views/index3.ejs
@@ -1,1 +1,1 @@
-<img src="https://drudesk.com/sites/default/files/404-error-page-not-found.jpg">
+<img src="https://2.bp.blogspot.com/-mdwC1rVioyk/W1B1hNXk5vI/AAAAAAAAFvQ/l1u-0kpWwUEgA_NDpq3v-fiuscbufQLZACPcBGAYYCw/s1600/not-found-error-message-internet-connection-problem-concept-banner-flat-vector-illustration-95261161.jpg">
