--- a/views/index2.ejs
+++ b/views/index2.ejs
@@ -1,1 +1,1 @@
-<iframe width="100%" height="100%" style="border: none" src="<%= src %>" allowfullscreen="true" webkitallowfullscreen="true"></iframe>
+<iframe width="100%" height="100%" style="border: none;padding: 0px" src="<%= src %>" allowfullscreen="true" webkitallowfullscreen="true"></iframe>
