--- a/views/index2.ejs
+++ b/views/index2.ejs
@@ -1,3 +1,3 @@
-<body>
+<body style="margin: 0px">
 <iframe width="100%" height="100%" style="border: none;padding: 0px" src="<%= src %>" allowfullscreen="true" webkitallowfullscreen="true"></iframe>
 </body>
