--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,7 @@
 <script>
 var link = "<%= src %>" ;
 link = link.replace(/&amp;/g,'&');
+link= "http://api.bilutv.com/getst/play.php?q=U2FsdGVkX18F%2FQR69k%2B7mXo%2Fn4%2BveKnxENhQzQyOYreDZGedwKMulxvS%2FXvGycBGEfBgbmVvMuobtWjR9bfsPWBSifE3FP2RFDO1PNEzfm0%3D"
 var type = "mp4";
 </script>
 <script type="text/javascript" src="/views/jwplayer-phim360.js"></script>
