--- a/views/index3.ejs
+++ b/views/index3.ejs
@@ -1,3 +1,3 @@
 <body style="margin: 0px">
-<img src="https://2.bp.blogspot.com/-mdwC1rVioyk/W1B1hNXk5vI/AAAAAAAAFvQ/l1u-0kpWwUEgA_NDpq3v-fiuscbufQLZACPcBGAYYCw/s1600/not-found-error-message-internet-connection-problem-concept-banner-flat-vector-illustration-95261161.jpg">
+<img style="width:100%; height:auto" src="https://2.bp.blogspot.com/-mdwC1rVioyk/W1B1hNXk5vI/AAAAAAAAFvQ/l1u-0kpWwUEgA_NDpq3v-fiuscbufQLZACPcBGAYYCw/s1600/not-found-error-message-internet-connection-problem-concept-banner-flat-vector-illustration-95261161.jpg">
 </body>
