--- a/views/update.ejs
+++ b/views/update.ejs
@@ -77,10 +77,10 @@
                     dataType: "json",
                     success: function (response) {
                         if (response.success) {
-                            $('#html').attr('style',
+                            $('#html-old').attr('style',
                                 'background-color:green;width: 800px;height: 500px');
                         } else {
-                            $('#html').attr('style',
+                            $('#html-old').attr('style',
                                 'background-color:red;width: 800px;height: 500px');
                         }
 
